[fix] Corrige src api
¿Que cambio?
Se corrige la ruta de app que contiene la API.

¿Porqué cambio?
No se cargaba.

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <td class="font-weight-bold">$ <span>5000</span></td>
   </template>
 
-  <script src="/app.js"></script>
+  <script src="./app.js"></script>
 </body>
 
 </html>
